validator_derive_tests/tests/compile-fail/length/wrong_type.stderr
error: Validator `length` can only be used on types `String`, `&str`, Cow<'_,str>, `Vec`, slice, or map/set types (BTree/Hash/Index) but found `usize` for field `s`
 --> $DIR/wrong_type.rs:6:8
  |
6 |     s: usize,
  |        ^^^^^
